# attendance-journal-admin-panel

./: .env.sample  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  entrypoint.sh  poetry.toml  pyproject.toml  run-test.sh
.github/workflows/: build_and_tests.yml
project/: auto_sync_with_mssql.py  create_default_db_data.py  create_users_in_db_script.py  entrypoint-scheduler.sh
project/accounts/: admin.py  backends.py  enums.py  forms.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
project/accounts/migrations/: 0001_initial.py  0002_alter_user_is_superuser.py  0003_studyfield_user_date_added_user_is_metodist_and_more.py  0004_alter_user_date_added_alter_user_last_update.py  0005_alter_user_study_fields.py  0006_alter_user_study_fields.py  0007_studyfield_short_study_field.py  0008_user_email.py  0009_group_prepod_user_id_crm_user_study_courses_and_more.py
project/accounts/tests/: test_data_base.py
project/accounts/tests_accounts/: api_requests.py  conftest.py  schemas.py  test_1_urls.py  test_2_login.py  test_3_userspage.py  test_4_updateuser.py  test_5_mssql.py
project/project/: scheme.py  settings.py  urls.py  yasg.py
project/project/tests_project/: test_1_docs.py
